# trakktor

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml  tasks.sh
dev-tasks-runner/: Cargo.toml
dev-tasks-runner/src/: main.rs
trakktor/: Cargo.toml
trakktor-cli/: Cargo.toml
trakktor-cli/src/: main.rs  trakktor_cli.rs
trakktor-cli/src/trakktor_cli/: cli.rs
trakktor-cli/src/trakktor_cli/cli/: aws_batch.rs  disclaimer.txt  structify_text.rs
trakktor/src/: app_config.rs  config_hash.rs  delete.rs  download.rs  embedding.rs  hasher.rs  job.rs  lib.rs  list.rs  llm.rs  open_ai.rs  structify_text.rs  transcribe.rs  whisper.rs
trakktor/src/ai_chat/: chat_doc.rs  mod.rs
trakktor/src/aws/: batch.rs  mod.rs  s3.rs
trakktor/src/aws/cloudformation/: gpu_batch.rs
trakktor/src/aws_batch/: batch.rs  cloudformation.rs  config.rs  delete.rs  download.rs  ec2.rs  job.rs  list.rs  mod.rs  s3.rs  transcribe.rs  whisper.rs
trakktor/src/aws_batch/cloudformation/: base.rs  gpu_batch.rs
trakktor/src/llm/: open_ai.rs
trakktor/templates/cloudformation/: base.yaml  gpu_batch.yaml
whisper/: Dockerfile  main.sh
whisper_candle/: .gitignore  Cargo.toml  README.md
whisper_candle/download_models/: Cargo.toml
whisper_candle/download_models/src/: main.rs
whisper_candle/trakktor_candle/: Cargo.toml
whisper_candle/trakktor_candle/src/: lib.rs
whisper_candle/trakktor_candle/src/speech_recognition/: mod.rs  multilingual.rs  output_provider.rs  pcm_decode.rs
