[workspace]
members = ["trakktor", "trakktor-cli", "dev-tasks-runner"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-cloudformation = "1.25.0"
aws-sdk-ec2 = "1.34.0"
aws-sdk-s3 = "1.31.0"
aws-sdk-batch = "1.33"
aws-smithy-types = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
askama = "0.12"
blake3 = "1.5"
base64 = "0.22"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
rmp-serde = "1.3"
clap = { version = "4.5", features = ["derive", "env"] }
cmd_lib = "1.9"
uuid = { version = "1.8", features = ["v4"] }
strum = "0.26"
strum_macros = "0.26"
chrono = { version = "0.4", features = ["serde"] }
duration-str = "0.11"
toml_edit = { version = "0.22", features = ["serde"] }
async-recursion = "1.1"
reqwest = { version = "0.12", features = ["json"] }
# regex = "1.10"
itertools = "0"
# similar = { version = "2.6", features = ["unicode"] } # diff
bon = "2.1"
url = "2"
async-trait = "0.1"
redb = "2.1"
edit-distance = "2.1.3"
