[package]
name = "trakktor-cli"
version.workspace = true
edition.workspace = true

[dependencies]
trakktor = { path = "../trakktor" }

tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
aws-config = { workspace = true }
clap = { workspace = true }
