[package]
name = "trakktor"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
aws-config = { workspace = true }
aws-sdk-cloudformation = { workspace = true }
aws-sdk-ec2 = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-sdk-batch = { workspace = true }
aws-smithy-types = { workspace = true }
askama = { workspace = true }
blake3 = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
chrono = { workspace = true }
duration-str = { workspace = true }
toml_edit = { workspace = true }
async-recursion = { workspace = true }
reqwest = { workspace = true }
# similar = { workspace = true } # diff
bon = { workspace = true } 
url = { workspace = true }
async-trait = { workspace = true }
redb = { workspace = true }
# regex = { workspace = true }
itertools = { workspace = true }
edit-distance = { workspace = true }


# [dev-dependencies]
# proptest = "1"
# rand = "*"
