[workspace]
members = ["trakktor_candle", "download_models"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1"
candle-core = "0.3.3"
candle-transformers = "0.3.3"
candle-nn = "0.3.3"
rand = "0.8.5"
tokenizers = "0.15.2"
hf-hub = "0.3.2"
log = "0.4"
stderrlog = "0.6"
enum-iterator = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.5"
symphonia = { version = "0.5", features = ["all"] }
