[package]
name = "download_models"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trakktor_candle = { path = "../trakktor_candle" }
hf-hub = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
stderrlog = { workspace = true }
enum-iterator = { workspace = true }
