[package]
name = "trakktor_candle"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core = { workspace = true, features = ["metal"] }
candle-transformers = { workspace = true }
candle-nn = { workspace = true, features = ["metal"] }
anyhow = { workspace = true }
rand = { workspace = true }
tokenizers = { workspace = true }
log = { workspace = true }
enum-iterator = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
byteorder = { workspace = true }
symphonia = { workspace = true }
stderrlog = { workspace = true }
